fix right extra space

--- a/GL/css/style.css
+++ b/GL/css/style.css
@@ -108,10 +108,8 @@ button {
 }
 
 
-
-
 img {
-    width: 89%;
+    width: 90%;
     margin: 0 5%;
     border-radius: 50%;
 }
@@ -126,7 +124,7 @@ h1 {
 
 footer h4{
     bottom: 0;
-    width: 100%;
+    width: 95%;
     text-align: center;
     font-size: .8em;
 
@@ -202,7 +200,8 @@ input {
 
 label {
     display: block;
-    text-align: inherit;
-    
-    
+}
+
+#apps-box {
+    width: 95%;
 }
